# nespy

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  NESpy.ini  NESpy.rc  README.md  README.txt  build.ninja  keycodes.txt
.github/workflows/: build.yml
firmware/: firmware.ino
rc/: NESpy.rc  NESpy.res  embeds.s
src/: glad.c  ini.c  ini.h  inputs.c  inputs.h  inputs_joy.c  inputs_kbd.c  inputs_nes.c  keycodes.c  lodepng.c  lodepng.h  main.c  nespy.h
